# news_push

./: .gitignore  .gitignore.local  CHANGELOG.md  CODE_OPTIMIZATION_SUMMARY.md  IMMEDIATE_TASKS.md  NEXT_DEVELOPMENT_PLAN.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_OPTIMIZED.md  README.md  README.md.backup  ROADMAP_V0.2.0.md  WECHAT_PUSH_GUIDE.md  alternative_finance_test_results.json  check_health.py  cleanup_duplicate_code.sh  code_optimization_report.txt  cron_setup.sh  finance_zhihu_test_results.json  hardcoded_paths_fix_report.txt  main.py  main_optimized.py  new_sources_test_results.json  news_cache.db  news_source_test_results.json  pyproject.toml  refactor_summary.txt  requirements.txt  setup.py  setup_config.sh  setup_wechat_push.sh  smart_push.sh  test_alternative_finance_sources.py  test_alternative_sources.py  test_finance_zhihu_sources.py  test_new_sources.py  test_news_sources.py  test_wechat_push.py  update_to_v0.2.0.sh  updated_sources_verification.json  verify_updated_sources.py  (+1 more)
backup_20260204_141158/: global_news_pusher.py  smart_pusher_enhanced.py
backup_removed/: auto_stock_notifier.py  hourly_multi_stock_monitor.py  main_optimized.py  news_pusher.py
config/: .env  .env.example  alert_config.json  clawdbot_stock_config.json  social_config.json
logs/: push_report_20260204_160404.txt  simple_push_20260204_1354.txt
scripts/: check_api_config.py  check_privacy_issues.py  cleanup_duplicates.py  cleanup_project.py  fix_hardcoded_paths.py  optimize_code.py  push_control.sh  push_manager.sh  refactor_code.py  simple_cleanup.py  update_version.py
(+70 files in other folders)
